# json-atomic

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml
benches/: canonicalize.rs  seal.rs
docs/: paper-ii-json-atomic.md
examples/: logline_seal.rs  simple_seal.rs  trajectory_match.rs
src/: canonicalize.rs  cycle.rs  errors.rs  lib.rs  signed_fact.rs  trajectory.rs  version.rs
tests/: canonicalization.rs  canonicalization_edges.rs  integration.rs  seal_verify.rs  trajectory.rs
