[package]
name = "json_atomic"
version = "0.1.0"
edition = "2021"
description = "The Cryptographic Atom — JSON✯Atomic: canonicalization + BLAKE3 content addressing + DV25-Seal (Ed25519) for Signed Facts"
license = "MIT"
repository = "https://github.com/LogLine-Foundation/json_atomic"
readme = "README.md"
keywords = ["canonicalization", "cryptography", "signed-fact", "zero-trust", "verifiable"]
categories = ["cryptography", "encoding"]
resolver = "2"
documentation = "https://docs.rs/json_atomic"
homepage = "https://logline.world"
rust-version = "1.75"
exclude = ["docs/**", ".github/**", "CITATION.cff", "CHANGELOG.md"]

[features]
default = ["std", "unicode"]
# Habilita std para dev-experience (tests/examples/benches dependem de std)
std = []
# Build sem std: usa apenas alloc nas dependências (v0.1.1 ready)
alloc = []
# Normalização Unicode NFC opcional
unicode = ["dep:unicode-normalization"]

[dependencies]
# Integração direta com o átomo conceitual
logline-core = { version = "0.1.0", features = ["serde"] }

# Criptografia & hash
blake3 = "1.5"
ed25519-dalek = "2.1"

# Canônica & serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = { version = "0.1", optional = true }
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
rand_chacha = "0.3"

[[example]]
name = "simple_seal"

[[example]]
name = "logline_seal"

[[example]]
name = "trajectory_match"

[[bench]]
name = "canonicalize"
harness = false

[[bench]]
name = "seal"
harness = false

[package.metadata.docs.rs]
features = ["unicode"]
no-default-features = false
